tried implementing social authentication methods (Google, GitHub)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,20 @@ spring.h2.console.enabled=true
 
 
 
+# google
+spring.security.oauth2.client.registration.google.client-id=495315526253-gcu0ttjr1hi6cdp3c8at9htpuq8gh1tj.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+# github
+spring.security.oauth2.client.registration.github.client-id=Ov23liMuqjcJLWFf5aDl
+spring.security.oauth2.client.registration.github.client-secret=2f5531cc9b1eb3040ad919fb1ea1ae2776a9c1e5
+spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.github.scope=user:email
+
+# github provider info
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+
